--- a/BrilliantCut.RelatedQuery/BrilliantCut.RelatedQuery.csproj
+++ b/BrilliantCut.RelatedQuery/BrilliantCut.RelatedQuery.csproj
@@ -193,12 +193,12 @@
   <ItemGroup>
     <Compile Include="Extensions\SearchExtensions.cs" />
     <Compile Include="IRelatedFilter.cs" />
-    <Compile Include="MatchFilter.cs" />
+    <Compile Include="RelatedMatchFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RangeFilter.cs" />
+    <Compile Include="RelatedRangeFilter.cs" />
     <Compile Include="RelatedFilterBase.cs" />
-    <Compile Include="RelatedFilterContext.cs" />
-    <Compile Include="RelatedFilterRepository.cs" />
+    <Compile Include="RelatedFilterData.cs" />
+    <Compile Include="RelatedFilterRegistry.cs" />
     <Compile Include="RelatedItemQueryFactory.cs" />
   </ItemGroup>
   <ItemGroup>
