--- a/BrilliantCut.RelatedQuery.nuspec
+++ b/BrilliantCut.RelatedQuery.nuspec
@@ -19,6 +19,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\release\BrilliantCut.RelatedQuery.dll" target="lib\net45" />
+    <file src="BrilliantCut.RelatedQuery\bin\release\BrilliantCut.RelatedQuery.dll" target="lib\net45" />
   </files>
 </package>
